--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app">
     </div>
-    <script src="js/compiled/hablamos.js" type="text/javascript"></script>
+    <script src="js/compiled/smess.js" type="text/javascript"></script>
   </body>
 </html>
