--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.5.2/marked.min.js" type="text/javascript"></script>
     <script src="js/compiled/smess.js" type="text/javascript"></script>
   </body>
 </html>
