--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,9 @@
   <body>
     <div id="app">
     </div>
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/highlight.min.js"></script>
     <script src="js/compiled/smess.js" type="text/javascript"></script>
   </body>
 </html>
